# interactive_sports

./: .gitignore  README.md  pyproject.toml
docs/: nhl_agent_tool_catalog_plan.md
prompts/: system_prompt_v0.md
results/: agent_result_20260202_122338.json  agent_result_20260202_122338.md
scripts/: evaluate_fantasy_week.py  generate_endpoint_catalog.py
src/agent/: cli.py  llm_clients.py  prompt_loader.py  runner.py  types.py
src/data/: cache.py  normalize.py
src/fantasy_agent_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: endpoint_catalog.generated.json  nhl_api.py  tools.py
tests/: test_tools_smoke.py
